<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_no_internet"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:gravity="center_vertical|center_horizontal"
	android:visibility="gone"
	> 
	
       <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/no_internet_header"
         android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_horizontal"
        android:padding="20dp"/>
       <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/no_internet_info"
        android:gravity="center_horizontal"
        android:padding="10dp"/>

       <Button
           android:id="@+id/button_try_again"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/try_again" />
   </LinearLayout>